# OBSPlugin

./: .gitignore  CMakeLists.txt  PTZController.cpp  PTZController.h  README.md  buildspec.json  how-to-build-mac.txt  how-to-build-win.txt  macos_cmakelists.patch  mainwindow.cpp  mainwindow.h  mainwindow.ui  obs_plugins_cmakelists.patch
.github/scripts/: ptzoptics-build-windows.cmd
.github/workflows/: build-project.yaml  build-ptz-obs-macos.yml  build-ptz-obs-win.yml  test-notarization.yml
PTZController/: CMakeLists.txt  PTZController.cpp  PTZOpticsQT.pro  VirtualJoystick.h  aboutus.h  joystickdlg.h  mainwindow.cpp
PTZController/ui_macos/: helpwin.ui
gh_actions/: PtzOpticsOBSPlugin_x86_64.pkg  Setup.md  macos.sh  windows.cmd
gh_actions/root/.github/workflows/: build-ptz-obs-macos.yml
installers-src/mac-v2/scripts/: postinstall
installers-src/mac/PTZMacInstallHelper/: HelperProtocol.h  PTZMacInstallHelper-Info.plist  PTZMacInstallHelper-Launchd.plist  PluginFiles.h  PluginFiles.m  Server.h  Server.m  main.m
installers-src/mac/PTZMacInstallHelper.xcodeproj/: project.pbxproj
installers-src/mac/PTZMacInstallHelper.xcodeproj/xcshareddata/xcschemes/: PTZMacInstaller.xcscheme
installers-src/mac/PTZMacInstaller/: PTZMacInstaller-Info.plist  install.mm  main.m
installers-src/mac_old/: build-dmg
installers-src/mac_old/PTZMacInstaller/: CMakeLists.txt  install.mm  main.m
installers-src/win/: PtzObsPluginInstaller.sln
installers-src/win/PtzObsPluginInstaller/: PtzObsPluginInstaller.rc  PtzObsPluginInstaller.vcxproj  PtzObsPluginInstaller.vcxproj.filters  ResourceFile.cpp  ResourceFile.h  main.cpp  resource.h
src/: CMakeLists.txt  JoysticksCommon.h  PTZController.c.in  PTZController.cpp  PTZController.h  QJoysticks.cpp  QJoysticks.h  SDL_Joysticks.cpp  VirtualJoystick.cpp  constants.h  helpwin.cpp  hotkeyhelp.cpp  hotkeyhelp.h  joystickwrapper.h  mainwindow.cpp  mainwindow.h  pantiltlimitdlg.h  ptzqrc.qrc  xboxhelp.h  xboxhelp.ui
src/PTZController/: CMakeLists.txt  PTZController.h  PTZOpticsQT_win.pro  SDL_Joysticks.h  aboutus.cpp  helpwin.h  hotkeyhelp.h  joystickdlg.cpp  joystickwrapper.cpp  mainwindow.h  multicameras.cpp  multicameras.h  pantiltlimitdlg.cpp  xboxhelp.cpp
src/PTZController/ui_macos/: hotkeyhelp.ui  mainwindow.ui  multicameras.ui
src/PTZController/ui_windows/: aboutus.ui  helpwin.ui
src/cmake/macos/: Info.plist.in
src/ui_macos/: aboutus.ui  pantiltlimitdlg.ui
src/ui_windows/: hotkeyhelp.ui  joystickdlg.ui  mainwindow.ui
